# MunchBot-Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  app.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0e906e65ac99_added_nutrition_summary_table.py  854dfb38b877_added_user_goals_table.py  bdfd7ea547c5_initial_production_schema.py  ca3ea5643aad_added_is_pro_to_users_table.py
app/: config.py  database.py  dependencies.py  main.py  rate_limiter.py  redis_database.py  utils.py
app/agents/: chat_agent.py  nutri_summary_agent.py
app/dependancies/: auth_dependancies.py  db_dependencies.py
app/exceptions/: auth_exceptions.py
app/models/: auth_models.py  chat_model.py  nutrition_summary_model.py  user_goals.py
app/routers/: auth.py  chat.py  dashboard.py
app/schemas/: auth_schemas.py  dashboard_schemas.py
app/services/: auth_services.py  chat_services.py  dashboard_services.py
tests/: conftest.py  test_auth.py
