[project]
name = "calorie-gpt-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.3",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "bcrypt>=4.3.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    "pydantic-ai>=0.1.6",
    "psycopg2-binary>=2.9.10",
]
